new build targets

--- a/Reciever/platformio.ini
+++ b/Reciever/platformio.ini
@@ -13,6 +13,15 @@ platform = atmelavr
 board = feather32u4
 framework = arduino
 lib_deps = 
-    Wire
-    https://github.com/PowerBroker2/SerialTransfer
-    https://github.com/jecrespo/RadioHead
+	Wire
+	https://github.com/PowerBroker2/SerialTransfer
+	https://github.com/jecrespo/RadioHead
+
+[env:featherM0]
+platform = atmelsam
+board = adafruit_feather_m0
+framework = arduino
+lib_deps = 
+	Wire
+	https://github.com/PowerBroker2/SerialTransfer
+	https://github.com/jecrespo/RadioHead
