--- a/Transmitter/platformio.ini
+++ b/Transmitter/platformio.ini
@@ -15,3 +15,12 @@ framework = arduino
 lib_deps = 
     Wire
     https://github.com/jecrespo/RadioHead
+
+[env:featherM0]
+platform = atmelsam
+board = adafruit_feather_m0
+framework = arduino
+lib_deps = 
+	Wire
+	https://github.com/PowerBroker2/SerialTransfer
+	https://github.com/jecrespo/RadioHead
