--- a/Transmitter/platformio.ini
+++ b/Transmitter/platformio.ini
@@ -7,19 +7,18 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[env]
+lib_deps =
+    Wire
+    https://github.com/jecrespo/RadioHead
+    https://github.com/madhephaestus/WiiChuck
 
 [env:feather32u4]
 platform = atmelavr
 board = feather32u4
 framework = arduino
-lib_deps = 
-    Wire
-    https://github.com/jecrespo/RadioHead
 
 [env:featherM0]
 platform = atmelsam
 board = adafruit_feather_m0
 framework = arduino
-lib_deps = 
-	Wire
-	https://github.com/jecrespo/RadioHead
